--- a/app.css
+++ b/app.css
@@ -1,17 +1,25 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+
+
 .card {
     color: white;
     background-color:#333338;
     border-radius: 25px;
-    margin: 20px;
+    margin: 14px;
     display: flex;
     align-items: center; 
-    width: 600px; 
+    width: 600px;
+    height: 270px; 
 }
 
 img {
     width: 200px;
     height: 200px;
-    padding: 25px;
+    height: 100%;
+    border-radius: 12px 0 0 12px;
 }
 
 h2 {
@@ -26,12 +34,15 @@ text {
 .cardWords {
     display:flex;
     flex-direction: column;
+    padding: 16px;
 }
 
 .character-list{
+    padding-top: 150px;;
     display: flex;
     flex-wrap: wrap;
     background-color:#202329;
+    justify-content: center;
 }
 
 
@@ -49,6 +60,7 @@ header h1{
 }
 
 .nav-bar{
+    background-color: whitesmoke;
     display: flex;
     justify-content: space-between ;
     align-items: center;
@@ -58,6 +70,25 @@ header h1{
     padding: 15px;
     text-decoration: none;
     font-size: 20px;
-    font-weight: 200;
+    font-weight: 400px;
+    color:black
+}
 
+a:hover{
+    color:tomato
+}
+
+.help-us{
+    border: 1px solid orange;
+    border-radius: 6px;
+}
+
+.help-us:hover{
+    background-color: orange;
+    color: white;
+    border-radius: 6px;
+}
+
+.imageClass{
+    height: 100%;
 }
